# MPSV-Project

./: .gitignore  GCLparser.cabal  README.md  res  workload.md
benchmark/: bsort.gcl  invalidBsort.gcl  invalidDivByN.gcl  invalidFind12.gcl  invalidMemberOf.gcl  invalidPullUp.gcl  memberOf.gcl  pullUp.gcl  run10.sh
examples/: trycatch.gcl
examples/benchmark/: bsort.gcl  divByN.gcl  find12.gcl  invalidMemberOf.gcl  memberOf.gcl
examples/examplesHaskellZ3/: Z3ProverExample.hs
src/: Config.hs  Main.hs  Stats.hs  Traverse.hs  Type.hs  Verify.hs
src/GCLParser/: GCLDatatype.hs
src/Predicate/: Solver.hs  Tactics.hs
src/Simplifier/: Boolean.hs  Boolean2.hs  Expr.hs  Expr2.hs  Integer.hs  Simplifier.hs  Theory.hs
src/Tree/: Data.hs  Heuristic.hs  ProgramPath.hs  Walk.hs  wlp.hs
src/Utils/: Count.hs  Traverse.hs  Type.hs
test/: TreeTest.hs
