name:                GCLparser
version:             0.2.1
-- synopsis:
-- description:
license:             BSD3
license-file:        LICENSE
author:              Stefan Koppier, Wishnu Prasetya
-- maintainer:          s.koppier@students.uu.nl
-- copyright:
category:            Testing
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library gclparser-lib
  exposed-modules:     GCLParser.Parser
                     , GCLParser.GCLDatatype
                     , GCLParser.PrettyPrint
                     , GCLInterpreter
                     , MuGCL
                     , GCLUtils
                     , GCLLexer.Token
                     , GCLLexer.Lexer
                     , ExamplesOfSemanticFunction
                     , Tree.ProgramPath
                     , Tree.Wlp
                     , Traverse
                     , Type
                     , Predicate.Solver
                     , Main
                     , Simplifier.Simplifier
                     , Simplifier.Expr
                     , Simplifier.Boolean
                     , Simplifier.Integer
  -- other-extensions:
  build-depends:       base   >= 4.10
                     , array
                     , containers
                     , optparse-applicative
                     , pretty
                     , z3
                     , parallel
                     , time
  hs-source-dirs:      src
  build-tools:         happy, alex
  default-language:    Haskell2010
  GHC-Options:         -threaded -rtsopts -Wall
  default-extensions:  TupleSections
                     , NamedFieldPuns

test-suite tests
    type: exitcode-stdio-1.0
    main-is: TreeTest.hs
    build-depends: base >=4.10, HUnit >=1.6, gclparser-lib
    hs-source-dirs: test
    default-language: Haskell2010
