name:                GCLparser
version:             0.2.1
-- synopsis:
-- description:
license:             BSD3
license-file:        LICENSE
author:              Stefan Koppier, Wishnu Prasetya
-- maintainer:          s.koppier@students.uu.nl
-- copyright:
category:            Testing
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable verify
  main-is:             Main.hs
  build-depends:       base   >= 4.10
                     , array
                     , containers
                     , optparse-applicative
                     , pretty
                     , z3
                     , timeit
                     , optparse-applicative
                    --  , gclparser-lib
  other-modules:     GCLParser.Parser
                     , GCLParser.GCLDatatype
                     , GCLParser.PrettyPrint
                     , GCLInterpreter
                     , MuGCL
                     , GCLUtils
                     , GCLLexer.Token
                     , GCLLexer.Lexer
                     , ExamplesOfSemanticFunction
                     , Tree.Data
                     , Tree.Heuristic
                     , Tree.ProgramPath
                     , Tree.Wlp
                     , Tree.Walk
                     , Predicate.Solver
                     , Simplifier.Simplifier
                     , Simplifier.Expr
                     , Simplifier.Boolean
                     , Simplifier.Integer
                     , Utils.Traverse
                     , Utils.Type
                     , Utils.Count
                     , Verify
                     , Config
                     , Stats
  hs-source-dirs:      src
  default-language:    Haskell2010
  GHC-Options:         -Wall
  build-tools:         happy, alex
  default-extensions:  TupleSections
                     , NamedFieldPuns

-- library gclparser-lib
--   exposed-modules:     GCLParser.Parser
--                      , GCLParser.GCLDatatype
--                      , GCLParser.PrettyPrint
--                      , GCLInterpreter
--                      , MuGCL
--                      , GCLUtils
--                      , GCLLexer.Token
--                      , GCLLexer.Lexer
--                      , ExamplesOfSemanticFunction
--                      , Tree.ProgramPath
--                      , Tree.Wlp
--                      , Tree.Walk
--                      , Predicate.Solver
--                      , Simplifier.Simplifier
--                      , Simplifier.Expr
--                      , Simplifier.Boolean
--                      , Simplifier.Integer
--                      , Traverse
--                      , Type
--                      , Stats
--                      , Main
--   -- other-extensions:
--   build-depends:       base   >= 4.10
--                      , array
--                      , containers
--                      , optparse-applicative
--                      , pretty
--                      , z3
--                      , timeit
--                      , optparse-applicative
--                     --  , mtl
--   hs-source-dirs:      src
--   build-tools:         happy, alex
--   default-language:    Haskell2010
--   GHC-Options:         -Wall
--   default-extensions:  TupleSections
--                      , NamedFieldPuns

test-suite tests
    type: exitcode-stdio-1.0
    main-is: TreeTest.hs
    build-depends: base >=4.10, HUnit >=1.6, gclparser-lib
    hs-source-dirs: test
    default-language: Haskell2010
